--- a/challenge/layout/css/variables.css
+++ b/challenge/layout/css/variables.css
@@ -111,7 +111,7 @@
   --color-grey-dark-3: #777;
   --color-grey-dark-4: #999;
 
-  --color-primary: var(--color-orange);
+  --color-primary: #075c5f;
   --color-primary-dark: var(--color-orange-dark);
 
   --color-secondary: var(--color-green);
