--- a/challenge/layout/css/framework.css
+++ b/challenge/layout/css/framework.css
@@ -81,8 +81,8 @@ img {
   text-align: center;
   line-height: 1.3;
   margin-bottom: 2.4rem;
-  /* letter-spacing: var(--tracking-tight); */
 }
+/* letter-spacing: var(--tracking-tight); */
 
 .section-header {
   text-align: center;
@@ -200,7 +200,7 @@ img {
 .flex-grid {
   display: flex;
   flex-direction: row;
-  flex-wrapper: wrapper;
+  /* flex-wrapper: wrapper; */
 }
 
 .grid {
@@ -300,7 +300,7 @@ strong {
   background-clip: padding-box;
 }
 
-/* .clip {
+.clip {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
@@ -317,7 +317,7 @@ strong {
 
 .clip-5 {
   -webkit-line-clamp: 5;
-} */
+}
 
 .quarter {
   width: calc(25% - var(--space-xs));
