--- a/challenge/layout/css/main.css
+++ b/challenge/layout/css/main.css
@@ -1,37 +1,9 @@
 @import url("normalize.css");
+@import url("variables.css");
 @import url("framework.css");
-
-/* rows */
-/* ========================================================================================================================================== */
-.row-2 {
-  background-color: var(--color-green-grey-2);
-}
-
-.row-3 {
-}
-
-.row-4 {
-  background-color: var(--color-green-grey-dark-1);
-}
-
-.row-5 {
-  background: var(--color-grey-light-1);
-}
-
-.row-6 {
-  background: #f4f4f4;
-}
-
-.row-7 {
-  background: #ffffff;
-}
-
-.row-8 {
-  background: #222;
-}
-.row-9 {
-  background: #111;
-}
+@import url("mainav.css");
+@import url("bootstrap.css");
+@import url("vendor.css");
 
 .overlay {
   position: relative;
@@ -55,163 +27,6 @@
 
 /* header */
 /* ========================================================================================================================================== */
-#header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: var(--color-green-grey-2);
-  padding: 32px;
-}
-
-#header #logo {
-}
-
-#header #logo a {
-  color: #ffffff;
-  font-variant: small-caps;
-  letter-spacing: 0.4px;
-}
-
-#header #logo i {
-  font-size: 18px;
-  /* font-weight: normal; */
-}
-
-#header .logo {
-  height: 2.2rem;
-}
-
-/* main-nav */
-#main-nav {
-}
-
-#main-nav ul {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #ffffff;
-  display: flex;
-  justify-content: flex-end;
-  gap: var(--space-sm);
-  /* width: 100%; */
-}
-
-#main-nav li {
-  display: inline-block;
-  font-size: var(--text-md);
-  font-weight: var(--font-bold);
-  padding: 0 var(--space-xs);
-}
-
-#main-nav a {
-  color: #ffffff;
-}
-
-#main-nav li:link,
-#main-nav li:visited {
-  transition: all 0.3s;
-}
-
-#main-nav li:hover,
-#main-nav li:active {
-  color: #cf711f;
-}
-
-#main-nav li.nav-cta:hover,
-#main-nav li.nav-cta:active {
-  background-color: #cf711f;
-}
-
-#btn-mobile-nav {
-  border: none;
-  background: none;
-  cursor: pointer;
-  display: none;
-}
-
-.icon-mobile-nav {
-  height: 3rem;
-  width: 3rem;
-  color: #333;
-  color: var(--color-orange);
-}
-
-.icon-mobile-nav[name="close-outline"] {
-  display: none;
-}
-
-/* sticky navigation */
-.sticky #header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 3;
-  /* box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03); */
-}
-
-.sticky .banner-primary {
-  margin-top: 9.6rem;
-}
-
-@media screen and (max-width: 950px) {
-  #header {
-    padding: 16px 32px;
-  }
-  #btn-mobile-nav {
-    display: block;
-    z-index: 3;
-  }
-
-  #main-nav {
-    background-color: rgba(255, 255, 255, 0.9);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(10px);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    transform: translateX(100%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 0.5s ease-in;
-    opacity: 0;
-    /* 2) Make it unaccessible to mouse and keyboard */
-    pointer-events: none;
-    /* 3) Hide it from screen readers */
-    visibility: hidden;
-  }
-
-  .nav-open #main-nav {
-    opacity: 1;
-    pointer-events: auto;
-    visibility: visible;
-    transform: translateX(0);
-  }
-
-  .nav-open #main-nav a {
-    color: #000;
-  }
-
-  .nav-open .icon-mobile-nav[name="close-outline"] {
-    display: block;
-  }
-
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
-    display: none;
-  }
-
-  #main-nav ul {
-    flex-direction: column;
-    gap: 4.8rem;
-  }
-
-  #main-nav li:link,
-  #main-nav li:visited {
-    font-size: 3rem;
-  }
-}
 
 /* banners */
 /* ========================================================================================================================================== */
@@ -246,23 +61,11 @@
 
 /* services */
 /* ========================================================================================================================================== */
+
 #services {
 }
-#services article {
-  border: 1px solid;
-  border-radius: 0;
-}
 
-#services .card-header {
-  position: relative;
-  padding-top: 40px;
-}
-
-#services li article:hover {
-  cursor: pointer;
-}
-
-#services li article a i {
+#services article i {
   display: block;
   position: absolute;
   top: -25px;
@@ -276,137 +79,14 @@
   text-align: center;
 }
 
-#services li article footer {
-  margin-top: 20px;
-}
-
-#services li article p {
-  align-self: flex-end;
-  margin-top: auto;
-  font-size: 16px;
-  /* position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 1rem; */
-}
-
-#services article {
-  border: 1px solid;
-  border-radius: 0;
-}
-
-#services .card-header {
-  position: relative;
-  padding-top: 40px;
-}
-
-#services li article:hover {
-  cursor: pointer;
-}
-
-#services li article a i {
-  display: block;
-  position: absolute;
-  top: -25px;
-  right: var(--space-md);
-  width: 50px;
-  height: 50px;
-  line-height: 48px;
-  border: 1px solid;
-  border-radius: 3px;
-  font-size: 1.32rem;
-  text-align: center;
-}
-
-#services li article footer {
-  margin-top: 20px;
-}
-
-#services li article p {
-  align-self: flex-end;
-  margin-top: auto;
-  font-size: 16px;
-  /* position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 1rem; */
-}
-/*  */
-
-/* #services > .heading {
-  margin-bottom: 4rem;
-}
-
-#services-list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 3rem;
-  grid-row-gap: 3.6rem;
-}
-
-#services-list li {
-  display: contents;
-}
-
-#services-list li article {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--color-white);
-  text-align: start;
-  border: 1px solid;
-  border-radius: 3px;
-  padding: 2.8rem 3rem;
-}
-
-#services-list li article .heading {
+#services article .heading {
   font-size: var(--text-lg);
-  font-weight: bold;
-  line-height: 1;
-  margin-bottom: 1.2rem;
-  text-align: start;
+  margin-bottom: var(--space-md);
+  padding-top: var(--space-md);
 }
 
-#services-list li article:hover {
-  box-shadow: var(--shadow-dark);
-  cursor: pointer;
-}
-
-#services-list li article > a > i {
-  display: block;
-  position: absolute;
-  top: -25px;
-  right: var(--space-md);
-  width: 50px;
-  height: 50px;
-  line-height: 48px;
-  border: 1px solid;
-  border-radius: 3px;
-  font-size: 1.32rem;
-  text-align: center;
-  background-color: black;
-  color: var(--color-secondary);
-}
-
-#services-list li article p {
-  align-self: flex-end;
-  margin-top: auto;
-  font-size: 16px;
-} */
-
-@media screen and (max-width: 1536px) {
-  #services-list {
-  }
-  #services-list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  #services-list {
-    grid-template-columns: 1fr;
-    padding: 0 75px;
-  }
+#services article p {
+  margin-bottom: var(--space-lg);
 }
 
 /* technologies */
@@ -493,11 +173,12 @@
   color: #ffffff;
 }
 
-#webdev-list {
+/* Doesn't work with bxslider */
+/* #webdev-list {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-}
+} */
 
 #webdev article {
   background-color: #fefefe;
@@ -558,7 +239,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  flex-wrapper: wrapper;
+  flex-wrap: wrap;
   margin: 1.2rem 0;
   gap: 0.8rem;
 }
@@ -876,6 +557,11 @@ textarea.form-control {
   margin-bottom: 1rem;
 }
 
+#footer .logo {
+  height: 48px;
+  width: auto;
+}
+
 #footer .logo img {
   height: 50px;
   width: 50px;
@@ -896,9 +582,15 @@ textarea.form-control {
   font-size: 1.5rem;
 }
 
-#footer .logo {
-  height: 48px;
-  width: auto;
+#footer fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#footer input,
+#footer button {
+  max-width: 75%;
 }
 
 @media screen and (max-width: 750px) {
@@ -925,4 +617,48 @@ textarea.form-control {
 
 .year {
   font-weight: bold;
+}
+
+/* colours
+========================================================================================================================================== */
+/* rows
+========================================================================================================================================== */
+.row-1 {
+  background-color: #075c5f;
+}
+
+.row-2 {
+  background-color: #075c5f;
+}
+
+.row-3 {
+}
+
+.row-4 {
+  background-color: var(--color-green-grey-dark-1);
+  background-color: #075c5f;
+}
+
+.row-5 {
+  background: var(--color-grey-light-1);
+}
+
+.row-6 {
+  background: #f4f4f4;
+}
+
+.row-7 {
+  background: #ffffff;
+}
+
+.row-8 {
+  background: #222;
+}
+.row-9 {
+  background: #111;
+}
+
+#services article i {
+  background-color: white;
+  color: var(--color-secondary);
 }
